--- a/todo/docker_test/docker-compose.yml
+++ b/todo/docker_test/docker-compose.yml
@@ -13,7 +13,8 @@ services:
   backend:
     build:
       context: .
-    ports: -8080:8080
+    ports:
+      - 8080: 8080
     command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py testusers && python manage.py runserver 0.0.0.0:8080 "
     depends_on:
       - db
