--- a/todo/docker_test/Dockerfile
+++ b/todo/docker_test/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.9-alpine3.15
 
-RUN apt-get update \
-    && apt-get install -y postgresql postgresql-contrib libpq-dev python3-dev
+RUN apt-get update && apt-get install -y postgresql postgresql-contrib libpq-dev python3-dev
 RUN pip3 install --upgrade pip
-COPY ./library/ ./
+COPY ../../todo/ ./
 RUN pip3 install -r requirements.txt
 COPY wait-for-postgres.sh .
 RUN chmod +x wait-for-postgres.sh
