--- a/todo/Dockerfile
+++ b/todo/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-alpine3.15
 
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib libpq-dev python3-dev
+RUN apk update && apk add -f postgresql postgresql-contrib libpq-dev python3-dev
 RUN pip3 install --upgrade pip
 COPY ../../todo/ ./
 RUN pip3 install -r requirements.txt
