--- a/todo/Dockerfile
+++ b/todo/Dockerfile
@@ -1,6 +1,7 @@
-FROM python:3.9-alpine3.15
+FROM python:3.9-slim
 
-RUN apk update && apk add -f postgresql postgresql-contrib libpq-dev python3-dev
+RUN apt-get update \
+    && apt-get install -y postgresql postgresql-contrib libpq-dev python3-dev
 RUN pip3 install --upgrade pip
 COPY . .
 RUN pip3 install -r requirements.txt
