--- a/todo/docker-compose.yml
+++ b/todo/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: drf_todo
+      POSTGRES_DB: drf_db
   backend:
     build:
       context: .
     ports:
       - 8080:8080
-    command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py testusers && python manage.py runserver 0.0.0.0:8080 "
+    command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py create_data && python manage.py runserver 0.0.0.0:8080 "
     depends_on:
       - db
