--- a/todo/docker-compose.yml
+++ b/todo/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       context: .
     ports:
       - 8080:8080
-    command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py create_data && python manage.py runserver 0.0.0.0:8080 "
+    command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py testusers && python manage.py runserver 0.0.0.0:8080 "
     depends_on:
       - db
