--- a/todo/Dockerfile
+++ b/todo/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python:3.9-bullseye
 
 RUN apt-get update \
     && apt-get install -y postgresql postgresql-contrib libpq-dev python3-dev
@@ -7,3 +7,4 @@ COPY . .
 RUN pip3 install -r requirements.txt
 COPY wait-for-postgres.sh .
 RUN chmod +x wait-for-postgres.sh
+RUN pip3 install gunicorn
