--- a/todo/docker-compose.yml
+++ b/todo/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: postgres:13.1
+    image: postgres:14.2
     privileged: true
     ports:
       - 5432:5432
@@ -10,11 +10,30 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: drf_db
+
   backend:
     build:
       context: .
-    ports:
-      - 8080:8080
-    command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py testusers && python manage.py runserver 0.0.0.0:8080 "
+    expose:
+      - 8080
+    command: bash -c "
+      ./wait-for-postgres.sh db
+      && python manage.py migrate
+      && gunicorn todo.wsgi -b 0.0.0.0:8080"
     depends_on:
       - db
+
+  nginx:
+    build: ./nginx
+    ports:
+      - 8000:80
+    depends_on:
+      - backend
+
+  frontend:
+    build: ./frontend
+    ports:
+      - 80:80
+    depends_on:
+      - nginx
+
