--- a/todo/nginx/nginx.conf
+++ b/todo/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
 
         # add_header Access-Control-Allow-Origin *;
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'http://194.67.121.63';
             
             # Om nom nom cookies
             
@@ -31,7 +31,7 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }   
-        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Origin' 'http://194.67.121.63:80';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE';
         add_header 'Access-Control-Allow-Headers'
