--- a/todo/docker-compose.yml
+++ b/todo/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   backend:
     build:
       context: .
-    expose:
-      - 8080
+    ports:
+      - 8080:8080
     command: bash -c " ./wait-for-postgres.sh db && python manage.py migrate && python manage.py testusers --quantity 10 && gunicorn todo.wsgi -b 0.0.0.0:8080"
     depends_on:
       - db
